trying fix #7 for jumping background on mobile

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -654,8 +654,8 @@ footer.bg-dark h6,
   left: 0;
   z-index: 1;
   background: #292929;
-  background-size: cover;
-  background-position: 50% 50%;
+  background-size: cover !important;
+  background-position: 50% 50% !important;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -5679,15 +5679,7 @@ footer.bg-dark a {
 WHERE MAGIC HAPPENS
 **********************/
 .background-image-holder {
-  background-size: cover !important;
-  -webkit-background-size: cover !important;
-  -moz-background-size: cover !important;
-  -o-background-size: cover !important;
-  height: 100% !important;
-  width: 100% !important;
-  position: fixed !important;
-  background-position: center center !important;
-  background-repeat: no-repeat !important;
+  height: 100vh;
 }
 #feedback-icon {
   background: url("../images/feedback.svg") 0 0 no-repeat;
